Delted useless files

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="center">
     <h1 style="font-family:Arial Black;">Alexey Zinkevich</h1>
     <p style="font-family:Arial;">@zinaiss</p>
-    <img src="{{url_for('static', filename='alex.jpg')}}" alt="альтернатиеный текст">
+    <img src="static/alex.jpg" alt="чзx типо ERROR 404">
     <p style="font-family:Arial; width: 50%;">This is fucking *****. But he's made my geography test. He's doing fucking 3d-models instead of making his english homework. Good luck in physics tomorrow</p>
     <a href="https://ohio.gov/home">
     <button>Fuck him</button> <button>Slap him</button>
